# weixin-bot

./: README.md
examples/nodejs/: echo-bot.ts  generating-test.ts  package-lock.json  package.json
examples/python/: echo_bot.py  pyproject.toml
nodejs/: package.json
nodejs/src/: auth.ts
python/: README.md  pyproject.toml
python/examples/: echo_bot.py
python/weixin_bot/: __init__.py  api.py  auth.py  client.py  types.py
