[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weixin-bot-sdk"
version = "0.1.0"
description = "Python SDK for the WeChat iLink Bot API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiohttp"]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["weixin_bot*"]
